Fix button spacing

--- a/webapp/public/custom.css
+++ b/webapp/public/custom.css
@@ -19,6 +19,10 @@
   height: 64px;    
 }
 
+#menubar .item > .button {
+    margin-right: 0.25em;
+}
+
 #filelist .menu {
   width: 100%;
 }
